# xlarith

./: .gitignore  pyproject.toml
tests/: test_allocator_engine.py  test_arena.py  test_engine_xlwings_integration.py  test_representer.py  test_term.py
xlarith/: __init__.py  allocator.py  arena.py  compiler.py  engine.py  evaluator.py  placement.py  representer.py  term.py
