[build-system]
requires = ['setuptools>=69', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'xlarith'
version = '0.1.0'
description = 'Excel-backed symbolic arithmetic evaluation engine'
readme = ''
requires-python = '>=3.11'
dependencies = ['xlwings>=0.30']

[tool.setuptools]
packages = ['xlarith']

[tool.ruff]
line-length = 88
target-version = 'py311'

[tool.ruff.lint]
select = ['E', 'F', 'I', 'B', 'UP']
ignore = ['E203']

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'
line-ending = 'lf'

[tool.mypy]
python_version = '3.11'
pretty = true
show_error_codes = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ['xlwings', 'xlwings.*']
ignore_missing_imports = true
